.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/CRMfusionDBR101__Batch_Key_Builder_Data__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <description>Store information needed by the batch key builder during key building.</description>
    <fields>
        <fullName>CRMfusionDBR101__Batch_Set_Row_Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Combination of Rebuild Number and Object Type to create a unique key for the row to prevent corruption from multiple jobs being started simultaneously. Format: &lt;Rebuild Number&gt;_&lt;Object Name&gt;.</inlineHelpText>
        <label>Batch Set Row Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Batches_Done__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Batches Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Current_Batch_Started__c</fullName>
        <label>Current Batch Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Job_ID__c</fullName>
        <description>ID of the specific job running for this object type.</description>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Last_Batch_Size__c</fullName>
        <label>Last Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Max_Batch_Size__c</fullName>
        <label>Max Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Rebuild_Number__c</fullName>
        <description>Indicates which attempt this is at building keys in batch.</description>
        <externalId>true</externalId>
        <label>Rebuild Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Rebuild_Order__c</fullName>
        <label>Rebuild Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Ids__c</fullName>
        <label>Scenario IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Total_Batches__c</fullName>
        <label>Total Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Total_Duration__c</fullName>
        <label>Total Duration</label>
        <type>DateTime</type>
    </fields>
    <label>DupeBlocker Batch Key Builder Data</label>
    <nameField>
        <displayFormat>BKB-{00000}</displayFormat>
        <label>Batch Key Builder Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Batch Key Builder Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>